--- a/app/debuts/debuts.module.css
+++ b/app/debuts/debuts.module.css
@@ -1,30 +1,27 @@
-.body {
-    background-color: #816352;
-}
-
-.finfo {
+.dcards {
     display: flex;
-    align-items: center;
-}
-
-.finfo p {
-    font-size: 30px;
-}
-
-.finfo img {
-    width: 70px;
-    height: 70px;
-}
-
-.fhod {
-    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    color: white;
 }
-.fhod img {
+
+.dcards img {
+    width: 250px;
+    height: 250px;
+}
+
+.dcards p {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700;
+    font-size: 20px;
+}
+
+.dline {
     display: flex;
-   width: 700px;
-   height: 474px;
+    gap: 80px;
+    align-items: center;
+    justify-content: center;
 }
 
 .backButton {
@@ -32,8 +29,8 @@
     align-items: center;
     color: white;
     padding-left: 20px;
-    padding-bottom: 1px;
-    padding-top: 1px;
+    padding-bottom: 10px;
+    padding-top: 10px;
     text-decoration: none;
 }
 
@@ -47,6 +44,12 @@
     font-size: 25px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 700;
+}
+
+.boardbutton {
+    background-color: aliceblue;
+    width: 100px;
+    height: 100px;
 }
 
 .openChessButton {
